rstsr-mkl-ffi/src/cblas/ffi_extern.rs

    pub fn cblas_stpsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const f32,
        X: *mut f32,
        incX: MKL_INT,
    );
    pub fn cblas_dgemv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_dgbmv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        KL: MKL_INT,
        KU: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_dtrmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const f64,
        lda: MKL_INT,
        X: *mut f64,
        incX: MKL_INT,
    );
    pub fn cblas_dtbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const f64,
        lda: MKL_INT,
        X: *mut f64,
        incX: MKL_INT,
    );
    pub fn cblas_dtpmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const f64,
        X: *mut f64,
        incX: MKL_INT,
    );
    pub fn cblas_dtrsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const f64,
        lda: MKL_INT,
        X: *mut f64,
        incX: MKL_INT,
    );
    pub fn cblas_dtbsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const f64,
        lda: MKL_INT,
        X: *mut f64,
        incX: MKL_INT,
    );
    pub fn cblas_dtpsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const f64,
        X: *mut f64,
        incX: MKL_INT,
    );
    pub fn cblas_cgemv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_cgbmv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        KL: MKL_INT,
        KU: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_ctrmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ctbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ctpmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const c_void,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ctrsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ctbsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ctpsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const c_void,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_zgemv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_zgbmv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        KL: MKL_INT,
        KU: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_ztrmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ztbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ztpmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const c_void,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ztrsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ztbsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const c_void,
        lda: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ztpsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const c_void,
        X: *mut c_void,
        incX: MKL_INT,
    );
    pub fn cblas_ssymv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_ssbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_sspmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        Ap: *const f32,
        X: *const f32,
        incX: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_sger(
        Layout: CBLAS_LAYOUT,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        Y: *const f32,
        incY: MKL_INT,
        A: *mut f32,
        lda: MKL_INT,
    );
    pub fn cblas_ssyr(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        A: *mut f32,
        lda: MKL_INT,
    );
    pub fn cblas_sspr(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        Ap: *mut f32,
    );
    pub fn cblas_ssyr2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        Y: *const f32,
        incY: MKL_INT,
        A: *mut f32,
        lda: MKL_INT,
    );
    pub fn cblas_sspr2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        Y: *const f32,
        incY: MKL_INT,
        A: *mut f32,
    );
    pub fn cblas_dsymv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_dsbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        K: MKL_INT,
        alpha: f64,
        A: *const f64,
        lda: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_dspmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        Ap: *const f64,
        X: *const f64,
        incX: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_dger(
        Layout: CBLAS_LAYOUT,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        Y: *const f64,
        incY: MKL_INT,
        A: *mut f64,
        lda: MKL_INT,
    );
    pub fn cblas_dsyr(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        A: *mut f64,
        lda: MKL_INT,
    );
    pub fn cblas_dspr(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        Ap: *mut f64,
    );
    pub fn cblas_dsyr2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        Y: *const f64,
        incY: MKL_INT,
        A: *mut f64,
        lda: MKL_INT,
    );
    pub fn cblas_dspr2(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        Y: *const f64,
        incY: MKL_INT,
        A: *mut f64,
    );
    pub fn cblas_chemv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_chbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        K: MKL_INT,
        alpha: *const c_void,
        A: *const c_void,
        lda: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_chpmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        N: MKL_INT,
        alpha: *const c_void,
        Ap: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
